src/kdeclarative/qmlobjectsharedengine.cpp
@@ -8,6 +8,7 @@
 
 #include <QQmlContext>
 #include <QQmlEngine>
+#include <QQmlNetworkAccessManagerFactory>
 
 #include <QDebug>
 #include <kdeclarative.h>
@@ -26,21 +27,21 @@ public:
 
     ~QmlObjectSharedEnginePrivate()
     {
-        // when the only remaining are out two refs, reset the pointers, causing deletion
-        // when the refcount is 2, we are sure that the only refs are s_engine and our copy
-        // of engineRef
-        if (engineRef.use_count() == 2) {
+        // when the only remaining are our three refs, reset the pointers, causing deletion
+        // when the refcount is 3, we are sure that the only refs are s_engine, our copy
+        // of engineRef and m_engine in QmlObject.
+        if (engineRef.use_count() <= 3) {
             s_engine.reset();
         }
     }
 
-    static QQmlEngine *engine()
+    static std::shared_ptr<QQmlEngine> engine()
     {
         if (!s_engine) {
             s_engine = std::make_shared<QQmlEngine>();
             KDeclarative::setupEngine(s_engine.get());
         }
-        return s_engine.get();
+        return s_engine;
     }
 
     // used to delete it
@@ -52,7 +53,7 @@ public:
 std::shared_ptr<QQmlEngine> QmlObjectSharedEnginePrivate::s_engine = std::shared_ptr<QQmlEngine>();
 
 QmlObjectSharedEngine::QmlObjectSharedEngine(QObject *parent)
-    : QmlObject(QmlObjectSharedEnginePrivate::engine(), new QQmlContext(QmlObjectSharedEnginePrivate::engine()), this /*don't call setupEngine*/, parent)
+    : QmlObject(QmlObjectSharedEnginePrivate::engine(), new QQmlContext(QmlObjectSharedEnginePrivate::engine().get()), parent)
     , d(new QmlObjectSharedEnginePrivate())
 {
     rootContext()->setParent(this);
